Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97730

Wrong QMediaPlayer::position when QMediaPlayer::videoOutput==NULL

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.3.0 Alpha
    • 6.2.0, 6.2.1
    • Multimedia
    • None
    • Arch Linux with Qt 6.2 and multimedia handled by gstreamer (Arch packages "gst-plugins-good" and "gst-libav")
    • Linux/Wayland, Linux/X11
    • a95ff0c8b84d770ea46b712d52c04eb5114e3b9f (qt/qtmultimedia/dev) e8d25ce6d89aad07314a21babbd6cbab14230ad8 (qt/qtmultimedia/6.2)

    Description

      Create a QMediaPlayer and connect it to a QAudioOutput. Do not connect it to a video output. The QMediaPlayer can still play a video file set with QMediaPlayer::setSource. However, QMediaPlayer::position reports wrong values.

      QMediaPlayer::position increases much faster than the real position until it reaches the video duration and remains constant.

      This problem occurs only when playing video files (mp4, webm, mov) without connecting the media player to a video output. When playing audio files (.wav, .flac) no such problem arises. The problem does not occur in Qt 5.15.2. Minimal code for reproducing the problem is attached.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            piotr Piotr Srebrny (Inactive)
            valentinb Valentin B
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes