Consume videoframes in sync with clock on fake video sink

Fake video sink should consume video frames in sync with the pipeline
clock. Otherwise, when no video output is connected to the media
player the audio and video streams are out of sync and the pipeline
position that is primarly based on the video stream position is
incorrect.

Fixes: QTBUG-97730
Pick-to: 6.2
Change-Id: Ia940254ac6289bbe47c64f4294cb8f9c8b714527
Reviewed-by: Lars Knoll <lars.knoll@qt.io>